src/test/deca/syntax/invalid/sansobjet/DeclFlHexMax3.deca
//DeclFlHexMax3.deca:5:26: Erreur de compilation: flottant arrondi a l'infini
//Description: teste creation folttant infini
//Resultats: erreur ligne 5: arrondi a infini
{
    float t = 0x1.fFFFp130;
}
